--- a/assest/style/pages/index.css
+++ b/assest/style/pages/index.css
@@ -146,12 +146,16 @@
 
 @media screen and (max-width: 768px) {
   .blog-container {
-    column-gap: 0rem;
+    column-gap: 1rem;
   }
 
   .blog-card .card-top {
-    width: 20.5rem;
+    width: 19rem;
     height: 12rem;
+  }
+  
+  .blog-card .card-bottom {
+    width: 19rem;
   }
 }
 
